--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,13 @@ body {
   box-sizing: border-box;
 }
 
-h1,
+h1 {
+  margin: 0;
+  font-weight: 600;
+  line-height: 1.25;
+  font-size: 2rem;
+}
+
 h2,
 h3,
 h4,
